[tool.poetry]
name = "bbqbalance"
version = "0.1.0"
description = "Aplicación tipo Splitwise para hacer cuentas entre los padres y madres del parque cuando se hagan barbacoas"
authors = ["SERGIO TEJEDOR MORENO <tejedor.moreno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.10.3"
icecream = "^2.1.3"
pytz = "^2023.3.post1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
